评分卡模型最终卡方分箱结果

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /Kaggle/Titanic/predict_2.csv
 /Kaggle/IMDB/aclImdb/
 /Kaggle/Titanic/logistic_pred.csv
+!/ScoringCard/all_data_woe.csv
+ScoringCard/all_data_woe.csv
