TensorFlow的MNIST测试练习

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Kaggle/Titanic/logistic_pred.csv
 !/ScoringCard/all_data_woe.csv
 ScoringCard/all_data_woe.csv
+/Practice/TensorFlow-Saved-Models/*
