--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
-/Practice/LianjiaHousePrice.xlsx
-/cache/
+# 忽略任何目录下的.ipynb_checkpoints文件夹
+.ipynb_checkpoints/
+# 忽略任何目录下的 _pychache_文件夹
+_pycache_/
+/.idea
+
 /Kaggle/Titanic/predict.csv
 /Kaggle/Titanic/predict_2.csv
 /Kaggle/IMDB/aclImdb/
 /Kaggle/Titanic/logistic_pred.csv
-!/ScoringCard/all_data_woe.csv
-ScoringCard/all_data_woe.csv
+
+/Practice/LianjiaHousePrice.xlsx
 /Practice/TensorFlow-Saved-Models/*
 /Practice/TensorBoard-Logs/*
+
+/ScoringCard/all_data_woe.csv
+
+
