--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # 忽略任何目录下的.ipynb_checkpoints文件夹
 .ipynb_checkpoints/
 # 忽略任何目录下的 _pychache_文件夹
-_pycache_/
-/Practice/_pycache_/
+__pycache__/
 /.idea
 
 /Kaggle/Titanic/predict.csv
