--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,6 @@ __pycache__/
 /Practice/LianjiaHousePrice.xlsx
 /Practice/TensorFlow-Saved-Models/*
 /Practice/TensorBoard-Logs/*
+/Practice/datasets/PTB-simple-examples/
 
 /ScoringCard/all_data_woe.csv
-
-
