--- a/PythonGrammar/config.yaml
+++ b/PythonGrammar/config.yaml
@@ -22,3 +22,9 @@ section-2:
     - a2: [6,7,8,9]
   sec-6:
     key-1: [k, [1,2,3]]
+    # 字段值为空字符串
+    key-2: ''
+    # 字段值为 None
+    key-3:
+    # 字段值为空 list
+    key-4: []
