--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ dataset/
 /DataMining-Actions/LianjiaHousePrice.xlsx
 /DeepLearning-Actions/TensorFlow-Saved-Models/*
 /DeepLearning-Actions/TensorBoard-Logs/*
+/bert-pretrained-models/
