--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,14 @@
 .ipynb_checkpoints/
 # 忽略任何目录下的 _pychache_文件夹
 __pycache__/
+# 忽略IDE的文件夹
+/.idea
 # 忽略任何目录下的 dataset 文件夹
 dataset/
-/datasets/*
-
-/.idea
-
-/BERT-source-codes/bert-pre-trained-models/
-/BERT-source-codes/output/
-/DeepLearning-Actions/TensorBoard-Logs/
-/DeepLearning-Actions/TensorFlow-Saved-Models/
-/DataMining-Actions/LianjiaHousePrice.xlsx
-/DeepLearning-Actions/TensorFlow-Saved-Models/*
-/DeepLearning-Actions/TensorBoard-Logs/*
+/datasets/
 /bert-pretrained-models/
+/BERT-source-codes/output/
+/DataMining-Actions/LianjiaHousePrice.xlsx
+/DeepLearning-Actions/TensorBoard-Logs/
+/DeepLearning-Actions/TensorBoard-Logs/*
+/Others/task_flow.py
